interval Removed after 3 seconds

--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
       }
 
       var intervalAll = window.setInterval(() => {
-        // removeAllMarker();
         getAllBusLiveLocation();
+        removeAllMarker();
       }, 3000);
 
       // $('#optionId').on('change', function() {
