--- a/final.html
+++ b/final.html
@@ -10,8 +10,8 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css" rel="stylesheet" />
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
-    <link href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css" rel="stylesheet"
-        type="text/css" />
+    <link href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -99,7 +99,7 @@
         })();
         mapboxgl.accessToken = 'pk.eyJ1IjoiaW50ZWxsZXJneSIsImEiOiJja2h1YWR6YTMwaWxpMnpvM2RqZGtseDY1In0.1xADnFuRD1ip12QzF83xuQ';
         var map = new mapboxgl.Map({
-            container: 'map', // container id
+            container: 'map',
             style: 'mapbox://styles/intellergy/ckhxcpsqf0pos19r9ff8f7r0q',
             center: [28.187437, -25.87559471],
             zoom: 9.5
@@ -375,7 +375,7 @@
                         busCoordinates.forEach((coords, index) => {
                             var el = document.createElement("div");
                             el.className = "busMarker";
-                            el.innerHTML = index + 1;
+                            el.innerHTML = '<i class="fa fa-bus" aria-hidden="true"></i>';
                             el.addEventListener("click", function () {
                                 document.getElementById("dialogContent").innerHTML = `
                                 BusId: ${coords.busInfo.busId}<br>
@@ -389,6 +389,24 @@
                     }
                 };
                 requestBusCoordinates.send();
+            }
+
+            // Single Bus API
+            var requestSingleBusCoordinates = new XMLHttpRequest();
+            function getSingleBusCords(busId) {
+                requestSingleBusCoordinates.open("GET", singleBus + busId, true);
+                requestSingleBusCoordinates.open;
+                requestSingleBusCoordinates.onload = async function () {
+                    if (this.status >= 200 && this.status < 400) {
+                        json = JSON.parse(this.response);
+                        console.log(json.geometry.coordinates);
+                        map.flyTo({
+                            center: json.geometry.coordinates,
+                            essential: true
+                        });
+                    }
+                };
+                requestSingleBusCoordinates.send();
             }
 
             // Adding Exception Data
@@ -443,12 +461,12 @@
                 }
                 if (this.value !== "all") {
                     clearInterval(intervalAll);
+                    getSingleBusCords(this.value);
                     setInterval(() => {
                         removeAllMarker();
                         getAllBusLiveLocation(this.value);
                     }, 3000);
                 } else {
-                    // Logic to clear "all" interval and use single bus only
                 }
             });
         });
